--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -4,15 +4,12 @@
     <string name="sport">Sport event</string>
     <string name="status">Organize</string>
     <string name="group">Group stage</string>
-    <string name="semiFin">Semifinal</string>
+    <string name="semiFinal">Semifinal</string>
     <string name="champ">Final</string>
     <string name="winner">Last year winner </string>
     <string name="groupDay">March 25,2016</string>
-    <string name="semiFinDay">March 26,2016</string>
+    <string name="semiFinalDay">March 26,2016</string>
     <string name="champDay">March 27,2016</string>
     <string name="winnerName">Yalantis</string>
-    <string name="descrip">The football tournament between teams of the companies in the sphere of IT technologies will be held at the football field of SC Voshod at 19:00.</string>
-    <string name="exit">Are you shore you want to quit from App?</string>
-    <string name="yes">Yes</string>
-    <string name="no">No</string>
+    <string name="description">The football tournament between teams of the companies in the sphere of IT technologies will be held at the football field of SC Voshod at 19:00.</string>
 </resources>
